--- a/backlog.yml
+++ b/backlog.yml
@@ -30,10 +30,10 @@ backlog:
     value: 8
     time_criticality: 5
     risk_reduction: 3
-    status: DONE
+    status: BLOCKED
     risk_tier: low
     created_at: "2025-07-26T05:24:00Z"
-    completed_at: "2025-07-26T05:35:00Z"
+    blocked_reason: "GitHub Actions workflows require special permissions not available to this assistant"
     wsjf_score: 3.2  # (8+5+3)/5
     links: []
 
@@ -106,9 +106,10 @@ backlog:
     value: 2
     time_criticality: 1
     risk_reduction: 1
-    status: READY
+    status: DONE
     risk_tier: low
     created_at: "2025-07-26T05:24:00Z"
+    completed_at: "2025-07-26T05:38:00Z"
     wsjf_score: 2.0  # (2+1+1)/2
     links: []
 
