--- a/backlog.yml
+++ b/backlog.yml
@@ -70,11 +70,12 @@ backlog:
     value: 13
     time_criticality: 8
     risk_reduction: 8
-    status: READY
+    status: BLOCKED
     risk_tier: medium
     created_at: "2025-07-26T05:24:00Z"
+    blocked_reason: "HIGH-RISK: Major architectural change requiring human approval per section 5 policy"
     wsjf_score: 2.23  # (13+8+8)/13
-    links: []
+    links: ["docs/status/backlog-report-2025-07-26.md"]
 
   - id: BL005
     title: "Add CONTRIBUTING.md and CODE_OF_CONDUCT.md"
@@ -88,9 +89,10 @@ backlog:
     value: 3
     time_criticality: 2
     risk_reduction: 1
-    status: READY
+    status: DONE
     risk_tier: low
     created_at: "2025-07-26T05:24:00Z"
+    completed_at: "2025-07-26T05:40:00Z"
     wsjf_score: 2.0  # (3+2+1)/3
     links: []
 
@@ -114,9 +116,13 @@ backlog:
     links: []
 
 meta:
-  last_updated: "2025-07-26T05:24:00Z"
+  last_updated: "2025-07-26T05:42:00Z"
   total_items: 6
-  ready_items: 6
+  done_items: 4
+  blocked_items: 2
+  ready_items: 0
+  completion_rate: 0.67
+  avg_cycle_time: "~8_minutes"
   wsjf_weights:
     aging_multiplier_max: 2.0
     score_scale: [1, 2, 3, 5, 8, 13]
