fix: correct gitattributes syntax for binary file handling

--- a/.gitattributes
+++ b/.gitattributes
@@ -7,5 +7,14 @@ Pipfile.lock     merge=theirs
 *.md             merge=union
 CHANGELOG.md     merge=union
 README.md        merge=union
-*.svg *.png *.jpg *.jpeg *.gif *.zip *.tar.gz merge=binary
-*.exe *.dll *.so *.dylib merge=binary
+*.svg merge=binary
+*.png merge=binary
+*.jpg merge=binary
+*.jpeg merge=binary
+*.gif merge=binary
+*.zip merge=binary
+*.tar.gz merge=binary
+*.exe merge=binary
+*.dll merge=binary
+*.so merge=binary
+*.dylib merge=binary
