feat(quantum_task_planner): initial commit of quantum task planner system
- Added core quantum task representation with superposition and entanglement
- Implemented quantum task scheduler with annealing optimization
- Developed quantum probability optimizer with genetic algorithms
- Created entanglement manager for task quantum correlations
- Built FastAPI-based quantum task planner API
- Added CLI for task management and quantum operations
- Integrated advanced caching with quantum coherence awareness
- Implemented concurrent processing with quantum state management
- Added comprehensive logging and exception handling utilities
- Updated README with detailed quantum task planner overview and usage

This initial commit establishes the foundation for a quantum-inspired task planning system leveraging quantum computing principles for advanced scheduling, optimization, and task state management.

Co-authored-by: terragon-labs[bot] <terragon-labs[bot]@users.noreply.github.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,31 @@
-# Production dependencies for the Agentic Startup Studio Boilerplate
+# Production dependencies for the Quantum Task Planner
 
 # Web Framework
 fastapi==0.108.0
 uvicorn[standard]==0.25.0
 starlette==0.32.0
 
-# AI & Agent Framework
+# Quantum Computing & Scientific Computing
+numpy==1.26.2
+scipy==1.11.4
+qiskit==0.45.3
+qiskit-aer==0.13.3
+matplotlib==3.8.2
+
+# AI & Agent Framework (Optional - from original boilerplate)
 crewai==0.14.0
 openai==1.7.2
 anthropic==0.8.1
 langchain==0.1.0
 langchain-community==0.0.10
+
+# CLI Framework
+click==8.1.7
+rich==13.7.0
+
+# Async Support
+asyncio-mqtt==0.16.1
+aiofiles==23.2.1
 
 # Database
 sqlalchemy==2.0.25
