feat(deployment): add production deployment with Kubernetes and Docker Compose
- Introduce comprehensive production deployment guide (DEPLOYMENT_GUIDE.md) covering architecture, system requirements, deployment options, configuration, monitoring, backup, scaling, security, troubleshooting, and maintenance.
- Add production Dockerfile (Dockerfile.production) optimized for production use with non-root user, health checks, and multi-stage build.
- Update main Dockerfile for production readiness, security, and performance improvements.
- Add production docker-compose configuration (docker-compose.production.yml) with services for quantum-api, nginx, postgres, redis, prometheus, grafana, elasticsearch, logstash, kibana, rabbitmq, and backup.
- Add Kubernetes manifests for namespace, configmap, deployment, service, pvc, rbac, and hpa for production deployment.
- Add monitoring configurations for Prometheus and alert rules.
- Add NGINX production configuration with SSL, rate limiting, security headers, and proxy settings.
- Enhance quantum_task_planner API with production-ready features including middleware, health checks, logging, distributed quantum coordination, auto-scaling, and load balancing.
- Add distributed quantum synchronization module for multi-node coordination.
- Add performance scaling module with auto-scaling and quantum-aware load balancing.
- Add health checks and circuit breakers for system resources, database, redis, quantum coherence, and API reliability.
- Add middleware for security, rate limiting, authentication, quantum state tracking, health checks, and monitoring.
- Add deployment script (scripts/deploy.sh) for automated deployment with environment setup, image building, testing, and deployment to Docker Compose or Kubernetes.
- Add development and testing enhancements in Dockerfile and docker-compose.dev.yml.
- Add comprehensive test suites for API integration, quantum functionality, and performance benchmarks.

This commit establishes a robust, 

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,20 +1,18 @@
-# Development Docker Compose configuration
+# Quantum Task Planner - Development Docker Compose configuration
 # Use this for local development with hot-reload and debugging
 
 version: '3.8'
 
 services:
   # =============================================================================
-  # Development Container (DevContainer support)
+  # Quantum Task Planner Development Container
   # =============================================================================
-  devcontainer:
+  quantum-dev:
     build:
       context: .
       dockerfile: Dockerfile
       target: development
-      args:
-        BUILD_ENV: development
-    container_name: agentic-startup-devcontainer
+    container_name: quantum-task-planner-dev
     ports:
       - "8000:8000"  # FastAPI
       - "3000:3000"  # React dev server
